# escala

./: .coverage  .gitignore  AGENTS.md  CHANGES_SQUADS_GUI.md  GERAR_ESCALA_DELIVERABLE.md  GERAR_ESCALA_NAVIGATION.md  GERAR_ESCALA_REFACTORING_CHECKLIST.md  GERAR_ESCALA_REFACTORING_README.md  GERAR_ESCALA_TL_DR.md  README.md  REFACTORING_CASAIS_REPORT.md  REFACTORING_DISPONIBILIDADE_COMPLETION.md  REFACTORING_EVENTOS_COMPLETION.md  REFACTORING_FINAL_CHECKLIST.md  REFACTORING_GERAR_ESCALA_COMPLETION.md  REFACTORING_GERAR_ESCALA_FINAL.md  REFACTORING_MEMBROS_COMPLETE.md  REFACTORING_MEMBROS_GUI_COMPLETION.md  REFACTORING_MEMBROS_PATTERN.md  REFACTORING_SQUADS_COMPLETION.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY.txt  SUMMARY_MEMBROS_REFACTORING.md  VALIDATION_SQUADS_REFACTORING.py  app.py  components.json  conftest.py  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  quick_verify_refactoring.py  requirements.txt  run_eventos_tests.py  run_test_eventos.py  run_test_service.py  run_tests.py  run_tests_service.py  seed_data.py  test_eventos_validation.py  (+8 more)
src-tauri/: Cargo.toml  seed.sql  tauri.conf.json
src-tauri/.sqlx/: query-01000c2ac38775c68c8c22ef5b53a63128df66a0fde7b9622787e1d38bb30d18.json  query-04999daa59c5d82d0e9005c8097a64fc3aa3086cc1d79cc21eca52059043e6f4.json  query-0ced0c24bd8474a1708f4369cd0d8c8f69efc5c3d5a00f1e8da4d6f912055f20.json  query-11a2729d95a4dee9dbc0163142402cea0dce22e5fed9346172aeb289cf279b16.json  query-15fca1772969c591f29c498a856370b52e6ed1b1897ca0139a6ae9bddf208379.json  (+53 more)
src-tauri/migrations/: 0001_initial_schema.sql  (+4 more)
(+239 files in other folders)
